fixed bug on iphone, when site was frozen sometimes

--- a/media.less
+++ b/media.less
@@ -324,11 +324,15 @@ padding-left: 25px;
   white-space: nowrap;
 }
 
-#login {
-overflow: scroll;
-}
-.login__background {
-display: none;
+// #login {
+// overflow: scroll;
+// }
+// .login__background {
+// display: none;
+// }
+
+.login__social-block {
+    display: none;
 }
 .slide-two .text{
   padding-top: 50px;
